--- a/MobileSmartSystem/MyProject/templates/mqtt.html
+++ b/MobileSmartSystem/MyProject/templates/mqtt.html
@@ -14,63 +14,12 @@
             ip = (ip.split(":"))[0]; // ip = "224..."
             document.getElementById("broker").value = ip
         });
+        window.resizeTo(1517, 712);
     </script>
-    <style>
-        body {
-            background-color: powderblue;
-            font-family: "JetBrains Mono", serif;
-        }
-
-        .button {
-            background-color: lightslategray;
-            color: white;
-            border-radius: 10px;
-            box-shadow: 0px 8px 6px -6px #666;
-            font-family: "JetBrains Mono", serif;
-        }
-
-        #connection-form {
-            border: 2px solid black;
-            padding: 10px;
-            border-radius: 10px;
-        }
-
-        #Mos_Signal_activator {
-            border: 2px solid black;
-            padding: 10px;
-            border-radius: 10px;
-        }
-
-        #subscribe-form {
-            border: 2px solid black;
-            padding: 10px;
-            border-radius: 10px;
-        }
-
-        td {
-            border: 1px solid black;
-            text-align: center;
-            font-weight: bold;
-        }
-
-        #tem, #hum {
-            width: 100px;
-            background-color: black;
-            color: white;
-            font-weight: bold;
-        }
-
-        #bri, #ultra {
-            width: 500px;
-            background-color: black;
-            color: white;
-            font-weight: bold;
-
-        }
-    </style>
+    <link rel="stylesheet" href="../static/design.css">
 </head>
 <body>
-<h3>모스부호 생성기 및 생존키트</h3>
+<h2>모스부호 생성기 및 생존키트</h2>
 <b>내 기기 정보 확인하기</b>
 <form id="connection-form">
     <b>브로커 IP</b>
@@ -79,18 +28,21 @@
     <input onclick="startConnect()" type="button" class="button" value="전원 ON">
     <input onclick="startDisconnect()" type="button" class="button" value="전원 OFF">
 </form>
-<b>모스 부호 생성기</b>
+<br><b>모스 부호 생성기</b>
 <form id="Mos_Signal_activator">
+<!--    변환할 단어를 입력하면 getMessage 함수를 통해 모스부호 생성함수로 전달된다.-->
     <label>변환할 단어를 입력하고 버튼을 클릭하세요<br>
         <input name="led" id="send" type="text" value="SOS"></label>
     <input type="button" value="모스부호 만들기" name="mos" class="button" onclick="getMessage()">
 </form>
-<b>내가 있는 환경 분석</b>
+<br><b>내가 있는 환경 분석</b>
 <form id="subscribe-form">
-    <input onclick="subscribe('ultrasonic'); subscribe('temperature'); subscribe('humidity'); subscribe('brightness'); subscribe('mosSignal')"
-           type="button" class="button" value="측정시작">
-    <input onclick="unsubscribe('ultrasonic'); unsubscribe('temperature'); unsubscribe('humidity'); unsubscribe('brightness')"
-           type="button" class="button" value="측정종료">
+<!--    측정 시작 버튼을 누르면 모든 센서 값을 subscribe한다.-->
+    <input onclick="subscribe('ultrasonic'); subscribe('temperature');
+    subscribe('humidity'); subscribe('brightness')" type="button" class="button" value="측정시작">
+    <!--    측정 시작 버튼을 누르면 모든 센서 값을 unsubscribe한다.-->
+    <input onclick="unsubscribe('ultrasonic'); unsubscribe('temperature');
+        unsubscribe('humidity'); unsubscribe('brightness')" type="button" class="button" value="측정종료">
     <table id="info">
         <tr>
             <td>온도</td>
@@ -113,7 +65,8 @@
             </td>
         </tr>
     </table>
-</form><br>
+</form>
+<br>
 <div id="messages"></div>
 </body>
 </html>
